--- a/site/package.json
+++ b/site/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
     "framer-motion": "^6.2.8",
     "next": "latest",
     "react": "^17.0.2",
