--- a/site/package.json
+++ b/site/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "chart.js": "^3.7.1",
     "framer-motion": "^6.2.8",
     "next": "latest",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
