--- a/site/package.json
+++ b/site/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
