--- a/site/package.json
+++ b/site/package.json
@@ -9,6 +9,7 @@
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
     "chart.js": "^3.7.1",
+    "classnames": "^2.3.1",
     "framer-motion": "^6.2.8",
     "next": "latest",
     "react": "^17.0.2",
