--- a/site/package.json
+++ b/site/package.json
@@ -14,7 +14,8 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.29.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.0",
