--- a/netlify.toml
+++ b/netlify.toml
@@ -14,3 +14,9 @@
   
   command = "npm run build"
   publish = ".next"
+
+[[headers]]
+  # Define which paths this specific [[headers]] block will cover.
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
